Fix buttons overflowing view on mobile

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -157,3 +157,14 @@ section {
     text-align: left;
   }
 }
+
+@media only screen and (max-width: 800px) {
+  .league-links {
+    display: flex;
+    flex-wrap: wrap;
+    .btn {
+      flex: 1 1 40%;
+      margin-bottom: 5px;
+    }
+  }
+}
